@@ -4,41 +4,28 @@
 
 package io.modelcontextprotocol.server;
 
+import io.modelcontextprotocol.json.McpJsonMapper;
+import io.modelcontextprotocol.json.TypeRef;
+import io.modelcontextprotocol.json.schema.JsonSchemaValidator;
+import io.modelcontextprotocol.spec.*;
+import io.modelcontextprotocol.spec.McpSchema.*;
+import io.modelcontextprotocol.spec.McpSchema.CompleteResult.CompleteCompletion;
+import io.modelcontextprotocol.util.Assert;
+import io.modelcontextprotocol.util.DefaultMcpUriTemplateManagerFactory;
+import io.modelcontextprotocol.util.McpUriTemplateManagerFactory;
+import io.modelcontextprotocol.util.Utils;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import reactor.core.publisher.Flux;
+import reactor.core.publisher.Mono;
+
 import java.time.Duration;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.function.BiFunction;
-import java.util.stream.Collectors;
 
-import io.modelcontextprotocol.spec.DefaultMcpStreamableServerSessionFactory;
-import io.modelcontextprotocol.spec.McpServerTransportProviderBase;
-import io.modelcontextprotocol.spec.McpStreamableServerTransportProvider;
-import lombok.var;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
-import com.fasterxml.jackson.core.type.TypeReference;
-import com.fasterxml.jackson.databind.ObjectMapper;
-
-import io.modelcontextprotocol.spec.JsonSchemaValidator;
-import io.modelcontextprotocol.spec.McpClientSession;
-import io.modelcontextprotocol.spec.McpError;
-import io.modelcontextprotocol.spec.McpSchema;
-import io.modelcontextprotocol.spec.McpSchema.CallToolResult;
-import io.modelcontextprotocol.spec.McpSchema.LoggingLevel;
-import io.modelcontextprotocol.spec.McpSchema.LoggingMessageNotification;
-import io.modelcontextprotocol.spec.McpSchema.ResourceTemplate;
-import io.modelcontextprotocol.spec.McpSchema.SetLevelRequest;
-import io.modelcontextprotocol.spec.McpSchema.Tool;
-import io.modelcontextprotocol.spec.McpServerSession;
-import io.modelcontextprotocol.spec.McpServerTransportProvider;
-import io.modelcontextprotocol.util.Assert;
-import io.modelcontextprotocol.util.DeafaultMcpUriTemplateManagerFactory;
-import io.modelcontextprotocol.util.McpUriTemplateManagerFactory;
-import io.modelcontextprotocol.util.Utils;
-import reactor.core.publisher.Flux;
-import reactor.core.publisher.Mono;
+import static io.modelcontextprotocol.spec.McpError.RESOURCE_NOT_FOUND;
 
 /**
  * The Model Context Protocol (MCP) server implementation that provides asynchronous
@@ -88,7 +75,7 @@ public class McpAsyncServer {
 
 	private final McpServerTransportProviderBase mcpTransportProvider;
 
-	private final ObjectMapper objectMapper;
+	private final McpJsonMapper jsonMapper;
 
 	private final JsonSchemaValidator jsonSchemaValidator;
 
@@ -100,9 +87,9 @@ public class McpAsyncServer {
 
 	private final CopyOnWriteArrayList<McpServerFeatures.AsyncToolSpecification> tools = new CopyOnWriteArrayList<>();
 
-	private final CopyOnWriteArrayList<McpSchema.ResourceTemplate> resourceTemplates = new CopyOnWriteArrayList<>();
-
 	private final ConcurrentHashMap<String, McpServerFeatures.AsyncResourceSpecification> resources = new ConcurrentHashMap<>();
+
+	private final ConcurrentHashMap<String, McpServerFeatures.AsyncResourceTemplateSpecification> resourceTemplates = new ConcurrentHashMap<>();
 
 	private final ConcurrentHashMap<String, McpServerFeatures.AsyncPromptSpecification> prompts = new ConcurrentHashMap<>();
 
@@ -114,28 +101,28 @@ public class McpAsyncServer {
 
 	private List<String> protocolVersions;
 
-	private McpUriTemplateManagerFactory uriTemplateManagerFactory = new DeafaultMcpUriTemplateManagerFactory();
+	private McpUriTemplateManagerFactory uriTemplateManagerFactory = new DefaultMcpUriTemplateManagerFactory();
 
 	/**
 	 * Create a new McpAsyncServer with the given transport provider and capabilities.
 	 * @param mcpTransportProvider The transport layer implementation for MCP
 	 * communication.
 	 * @param features The MCP server supported features.
-	 * @param objectMapper The ObjectMapper to use for JSON serialization/deserialization
+	 * @param jsonMapper The JsonMapper to use for JSON serialization/deserialization
 	 */
-	public McpAsyncServer(McpServerTransportProvider mcpTransportProvider, ObjectMapper objectMapper,
-				   McpServerFeatures.Async features, Duration requestTimeout,
-				   McpUriTemplateManagerFactory uriTemplateManagerFactory, JsonSchemaValidator jsonSchemaValidator) {
+	McpAsyncServer(McpServerTransportProvider mcpTransportProvider, McpJsonMapper jsonMapper,
+			McpServerFeatures.Async features, Duration requestTimeout,
+			McpUriTemplateManagerFactory uriTemplateManagerFactory, JsonSchemaValidator jsonSchemaValidator) {
 		this.mcpTransportProvider = mcpTransportProvider;
-		this.objectMapper = objectMapper;
-		this.serverInfo = features.getServerInfo();
-        this.serverCapabilities = features.getServerCapabilities().mutate().logging().build();
-		this.instructions = features.getInstructions();
-		this.tools.addAll(withStructuredOutputHandling(jsonSchemaValidator, features.getTools()));
-		this.resources.putAll(features.getResources());
-		this.resourceTemplates.addAll(features.getResourceTemplates());
-		this.prompts.putAll(features.getPrompts());
-		this.completions.putAll(features.getCompletions());
+		this.jsonMapper = jsonMapper;
+		this.serverInfo = features.serverInfo();
+		this.serverCapabilities = features.serverCapabilities().mutate().logging().build();
+		this.instructions = features.instructions();
+		this.tools.addAll(withStructuredOutputHandling(jsonSchemaValidator, features.tools()));
+		this.resources.putAll(features.resources());
+		this.resourceTemplates.putAll(features.resourceTemplates());
+		this.prompts.putAll(features.prompts());
+		this.completions.putAll(features.completions());
 		this.uriTemplateManagerFactory = uriTemplateManagerFactory;
 		this.jsonSchemaValidator = jsonSchemaValidator;
 
@@ -148,19 +135,19 @@ public class McpAsyncServer {
 				requestTimeout, transport, this::asyncInitializeRequestHandler, requestHandlers, notificationHandlers));
 	}
 
-	public McpAsyncServer(McpStreamableServerTransportProvider mcpTransportProvider, ObjectMapper objectMapper,
-				   McpServerFeatures.Async features, Duration requestTimeout,
-				   McpUriTemplateManagerFactory uriTemplateManagerFactory, JsonSchemaValidator jsonSchemaValidator) {
+	McpAsyncServer(McpStreamableServerTransportProvider mcpTransportProvider, McpJsonMapper jsonMapper,
+			McpServerFeatures.Async features, Duration requestTimeout,
+			McpUriTemplateManagerFactory uriTemplateManagerFactory, JsonSchemaValidator jsonSchemaValidator) {
 		this.mcpTransportProvider = mcpTransportProvider;
-		this.objectMapper = objectMapper;
-		this.serverInfo = features.getServerInfo();
-		this.serverCapabilities = features.getServerCapabilities().mutate().logging().build();
-		this.instructions = features.getInstructions();
-		this.tools.addAll(withStructuredOutputHandling(jsonSchemaValidator, features.getTools()));
-		this.resources.putAll(features.getResources());
-		this.resourceTemplates.addAll(features.getResourceTemplates());
-		this.prompts.putAll(features.getPrompts());
-		this.completions.putAll(features.getCompletions());
+		this.jsonMapper = jsonMapper;
+		this.serverInfo = features.serverInfo();
+		this.serverCapabilities = features.serverCapabilities().mutate().logging().build();
+		this.instructions = features.instructions();
+		this.tools.addAll(withStructuredOutputHandling(jsonSchemaValidator, features.tools()));
+		this.resources.putAll(features.resources());
+		this.resourceTemplates.putAll(features.resourceTemplates());
+		this.prompts.putAll(features.prompts());
+		this.completions.putAll(features.completions());
 		this.uriTemplateManagerFactory = uriTemplateManagerFactory;
 		this.jsonSchemaValidator = jsonSchemaValidator;
 
@@ -179,11 +166,11 @@ public class McpAsyncServer {
 		notificationHandlers.put(McpSchema.METHOD_NOTIFICATION_INITIALIZED, (exchange, params) -> Mono.empty());
 
 		List<BiFunction<McpAsyncServerExchange, List<McpSchema.Root>, Mono<Void>>> rootsChangeConsumers = features
-				.getRootsChangeConsumers();
+			.rootsChangeConsumers();
 
 		if (Utils.isEmpty(rootsChangeConsumers)) {
-			rootsChangeConsumers = Arrays.asList((exchange, roots) -> Mono.fromRunnable(() -> logger
-					.warn("Roots list changed notification, but no consumers provided. Roots list changed: {}", roots)));
+			rootsChangeConsumers = List.of((exchange, roots) -> Mono.fromRunnable(() -> logger
+				.warn("Roots list changed notification, but no consumers provided. Roots list changed: {}", roots)));
 		}
 
 		notificationHandlers.put(McpSchema.METHOD_NOTIFICATION_ROOTS_LIST_CHANGED,
@@ -197,34 +184,34 @@ public class McpAsyncServer {
 		// Initialize request handlers for standard MCP methods
 
 		// Ping MUST respond with an empty data, but not NULL response.
-		requestHandlers.put(McpSchema.METHOD_PING, (exchange, params) -> Mono.just(new HashMap<>()));
+		requestHandlers.put(McpSchema.METHOD_PING, (exchange, params) -> Mono.just(Map.of()));
 
 		// Add tools API handlers if the tool capability is enabled
-		if (this.serverCapabilities.getTools() != null) {
+		if (this.serverCapabilities.tools() != null) {
 			requestHandlers.put(McpSchema.METHOD_TOOLS_LIST, toolsListRequestHandler());
 			requestHandlers.put(McpSchema.METHOD_TOOLS_CALL, toolsCallRequestHandler());
 		}
 
 		// Add resources API handlers if provided
-		if (this.serverCapabilities.getResources() != null) {
+		if (this.serverCapabilities.resources() != null) {
 			requestHandlers.put(McpSchema.METHOD_RESOURCES_LIST, resourcesListRequestHandler());
 			requestHandlers.put(McpSchema.METHOD_RESOURCES_READ, resourcesReadRequestHandler());
 			requestHandlers.put(McpSchema.METHOD_RESOURCES_TEMPLATES_LIST, resourceTemplateListRequestHandler());
 		}
 
 		// Add prompts API handlers if provider exists
-		if (this.serverCapabilities.getPrompts() != null) {
+		if (this.serverCapabilities.prompts() != null) {
 			requestHandlers.put(McpSchema.METHOD_PROMPT_LIST, promptsListRequestHandler());
 			requestHandlers.put(McpSchema.METHOD_PROMPT_GET, promptsGetRequestHandler());
 		}
 
 		// Add logging API handlers if the logging capability is enabled
-		if (this.serverCapabilities.getLogging() != null) {
+		if (this.serverCapabilities.logging() != null) {
 			requestHandlers.put(McpSchema.METHOD_LOGGING_SET_LEVEL, setLoggerRequestHandler());
 		}
 
 		// Add completion API handlers if the completion capability is enabled
-		if (this.serverCapabilities.getCompletions() != null) {
+		if (this.serverCapabilities.completions() != null) {
 			requestHandlers.put(McpSchema.METHOD_COMPLETION_COMPLETE, completionCompleteRequestHandler());
 		}
 		return requestHandlers;
@@ -237,24 +224,24 @@ public class McpAsyncServer {
 			McpSchema.InitializeRequest initializeRequest) {
 		return Mono.defer(() -> {
 			logger.info("Client initialize request - Protocol: {}, Capabilities: {}, Info: {}",
-					initializeRequest.getProtocolVersion(), initializeRequest.getCapabilities(),
-					initializeRequest.getClientInfo());
+					initializeRequest.protocolVersion(), initializeRequest.capabilities(),
+					initializeRequest.clientInfo());
 
 			// The server MUST respond with the highest protocol version it supports
 			// if
 			// it does not support the requested (e.g. Client) version.
 			String serverProtocolVersion = this.protocolVersions.get(this.protocolVersions.size() - 1);
 
-			if (this.protocolVersions.contains(initializeRequest.getProtocolVersion())) {
+			if (this.protocolVersions.contains(initializeRequest.protocolVersion())) {
 				// If the server supports the requested protocol version, it MUST
 				// respond
 				// with the same version.
-				serverProtocolVersion = initializeRequest.getProtocolVersion();
+				serverProtocolVersion = initializeRequest.protocolVersion();
 			}
 			else {
 				logger.warn(
 						"Client requested unsupported protocol version: {}, so the server will suggest the {} version instead",
-						initializeRequest.getProtocolVersion(), serverProtocolVersion);
+						initializeRequest.protocolVersion(), serverProtocolVersion);
 			}
 
 			return Mono.just(new McpSchema.InitializeResult(serverProtocolVersion, this.serverCapabilities,
@@ -296,13 +283,13 @@ public class McpAsyncServer {
 	private McpNotificationHandler asyncRootsListChangedNotificationHandler(
 			List<BiFunction<McpAsyncServerExchange, List<McpSchema.Root>, Mono<Void>>> rootsChangeConsumers) {
 		return (exchange, params) -> exchange.listRoots()
-				.flatMap(listRootsResult -> Flux.fromIterable(rootsChangeConsumers)
-						.flatMap(consumer -> Mono.defer(() -> consumer.apply(exchange, listRootsResult.getRoots())))
-						.onErrorResume(error -> {
-							logger.error("Error handling roots list change notification", error);
-							return Mono.empty();
-						})
-						.then());
+			.flatMap(listRootsResult -> Flux.fromIterable(rootsChangeConsumers)
+				.flatMap(consumer -> Mono.defer(() -> consumer.apply(exchange, listRootsResult.roots())))
+				.onErrorResume(error -> {
+					logger.error("Error handling roots list change notification", error);
+					return Mono.empty();
+				})
+				.then());
 	}
 
 	// ---------------------------------------
@@ -316,31 +303,30 @@ public class McpAsyncServer {
 	 */
 	public Mono<Void> addTool(McpServerFeatures.AsyncToolSpecification toolSpecification) {
 		if (toolSpecification == null) {
-			return Mono.error(new McpError("Tool specification must not be null"));
+			return Mono.error(new IllegalArgumentException("Tool specification must not be null"));
 		}
-		if (toolSpecification.getTool() == null) {
-			return Mono.error(new McpError("Tool must not be null"));
+		if (toolSpecification.tool() == null) {
+			return Mono.error(new IllegalArgumentException("Tool must not be null"));
 		}
-		if (toolSpecification.getCall() == null && toolSpecification.getCallHandler() == null) {
-			return Mono.error(new McpError("Tool call handler must not be null"));
+		if (toolSpecification.call() == null && toolSpecification.callHandler() == null) {
+			return Mono.error(new IllegalArgumentException("Tool call handler must not be null"));
 		}
-		if (this.serverCapabilities.getTools() == null) {
-			return Mono.error(new McpError("Server must be configured with tool capabilities"));
+		if (this.serverCapabilities.tools() == null) {
+			return Mono.error(new IllegalStateException("Server must be configured with tool capabilities"));
 		}
 
 		var wrappedToolSpecification = withStructuredOutputHandling(this.jsonSchemaValidator, toolSpecification);
 
 		return Mono.defer(() -> {
-			// Check for duplicate tool names
-			if (this.tools.stream().anyMatch(th -> th.getTool().getName().equals(wrappedToolSpecification.getTool().getName()))) {
-				return Mono.error(
-						new McpError("Tool with name '" + wrappedToolSpecification.getTool().getName() + "' already exists"));
+			// Remove tools with duplicate tool names first
+			if (this.tools.removeIf(th -> th.tool().name().equals(wrappedToolSpecification.tool().name()))) {
+				logger.warn("Replace existing Tool with name '{}'", wrappedToolSpecification.tool().name());
 			}
 
 			this.tools.add(wrappedToolSpecification);
-			logger.debug("Added tool handler: {}", wrappedToolSpecification.getTool().getName());
+			logger.debug("Added tool handler: {}", wrappedToolSpecification.tool().name());
 
-			if (this.serverCapabilities.getTools().getListChanged()) {
+			if (this.serverCapabilities.tools().listChanged()) {
 				return notifyToolsListChanged();
 			}
 			return Mono.empty();
@@ -357,8 +343,8 @@ public class McpAsyncServer {
 		private final Map<String, Object> outputSchema;
 
 		public StructuredOutputCallToolHandler(JsonSchemaValidator jsonSchemaValidator,
-											   Map<String, Object> outputSchema,
-											   BiFunction<McpAsyncServerExchange, McpSchema.CallToolRequest, Mono<McpSchema.CallToolResult>> delegateHandler) {
+				Map<String, Object> outputSchema,
+				BiFunction<McpAsyncServerExchange, McpSchema.CallToolRequest, Mono<McpSchema.CallToolResult>> delegateHandler) {
 
 			Assert.notNull(jsonSchemaValidator, "JsonSchemaValidator must not be null");
 			Assert.notNull(delegateHandler, "Delegate call tool result handler must not be null");
@@ -373,11 +359,16 @@ public class McpAsyncServer {
 
 			return this.delegateCallToolResult.apply(exchange, request).map(result -> {
 
+				if (Boolean.TRUE.equals(result.isError())) {
+					// If the tool call resulted in an error, skip further validation
+					return result;
+				}
+
 				if (outputSchema == null) {
-					if (result.getStructuredContent() != null) {
+					if (result.structuredContent() != null) {
 						logger.warn(
 								"Tool call with no outputSchema is not expected to have a result with structured content, but got: {}",
-								result.getStructuredContent());
+								result.structuredContent());
 					}
 					// Pass through. No validation is required if no output schema is
 					// provided.
@@ -387,31 +378,38 @@ public class McpAsyncServer {
 				// If an output schema is provided, servers MUST provide structured
 				// results that conform to this schema.
 				// https://modelcontextprotocol.io/specification/2025-06-18/server/tools#output-schema
-				if (result.getStructuredContent() == null) {
-					logger.warn(
-							"Response missing structured content which is expected when calling tool with non-empty outputSchema");
-					return new CallToolResult(
-							"Response missing structured content which is expected when calling tool with non-empty outputSchema",
-							true);
+				if (result.structuredContent() == null) {
+					String content = "Response missing structured content which is expected when calling tool with non-empty outputSchema";
+					logger.warn(content);
+					return CallToolResult.builder()
+						.content(List.of(new McpSchema.TextContent(content)))
+						.isError(true)
+						.build();
 				}
 
 				// Validate the result against the output schema
-				var validation = this.jsonSchemaValidator.validate(outputSchema, result.getStructuredContent());
+				var validation = this.jsonSchemaValidator.validate(outputSchema, result.structuredContent());
 
-				if (!validation.isValid()) {
-					logger.warn("Tool call result validation failed: {}", validation.getErrorMessage());
-					return new CallToolResult(validation.getErrorMessage(), true);
+				if (!validation.valid()) {
+					logger.warn("Tool call result validation failed: {}", validation.errorMessage());
+					return CallToolResult.builder()
+						.content(List.of(new McpSchema.TextContent(validation.errorMessage())))
+						.isError(true)
+						.build();
 				}
 
-				if (Utils.isEmpty(result.getContent())) {
+				if (Utils.isEmpty(result.content())) {
 					// For backwards compatibility, a tool that returns structured
 					// content SHOULD also return functionally equivalent unstructured
 					// content. (For example, serialized JSON can be returned in a
 					// TextContent block.)
 					// https://modelcontextprotocol.io/specification/2025-06-18/server/tools#structured-content
 
-					return new CallToolResult(Utils.asList(new McpSchema.TextContent(validation.getJsonStructuredOutput())),
-							result.getIsError(), result.getStructuredContent());
+					return CallToolResult.builder()
+						.content(List.of(new McpSchema.TextContent(validation.jsonStructuredOutput())))
+						.isError(result.isError())
+						.structuredContent(result.structuredContent())
+						.build();
 				}
 
 				return result;
@@ -427,27 +425,35 @@ public class McpAsyncServer {
 			return tools;
 		}
 
-		return tools.stream().map(tool -> withStructuredOutputHandling(jsonSchemaValidator, tool)).collect(Collectors.toList());
+		return tools.stream().map(tool -> withStructuredOutputHandling(jsonSchemaValidator, tool)).toList();
 	}
 
 	private static McpServerFeatures.AsyncToolSpecification withStructuredOutputHandling(
 			JsonSchemaValidator jsonSchemaValidator, McpServerFeatures.AsyncToolSpecification toolSpecification) {
 
-		if (toolSpecification.getCallHandler() instanceof StructuredOutputCallToolHandler) {
+		if (toolSpecification.callHandler() instanceof StructuredOutputCallToolHandler) {
 			// If the tool is already wrapped, return it as is
 			return toolSpecification;
 		}
 
-		if (toolSpecification.getTool().getOutputSchema() == null) {
+		if (toolSpecification.tool().outputSchema() == null) {
 			// If the tool does not have an output schema, return it as is
 			return toolSpecification;
 		}
 
 		return McpServerFeatures.AsyncToolSpecification.builder()
-				.tool(toolSpecification.getTool())
-				.callHandler(new StructuredOutputCallToolHandler(jsonSchemaValidator,
-						toolSpecification.getTool().getOutputSchema(), toolSpecification.getCallHandler()))
-				.build();
+			.tool(toolSpecification.tool())
+			.callHandler(new StructuredOutputCallToolHandler(jsonSchemaValidator,
+					toolSpecification.tool().outputSchema(), toolSpecification.callHandler()))
+			.build();
+	}
+
+	/**
+	 * List all registered tools.
+	 * @return A Flux stream of all registered tools
+	 */
+	public Flux<Tool> listTools() {
+		return Flux.fromIterable(this.tools).map(McpServerFeatures.AsyncToolSpecification::tool);
 	}
 
 	/**
@@ -457,23 +463,25 @@ public class McpAsyncServer {
 	 */
 	public Mono<Void> removeTool(String toolName) {
 		if (toolName == null) {
-			return Mono.error(new McpError("Tool name must not be null"));
+			return Mono.error(new IllegalArgumentException("Tool name must not be null"));
 		}
-		if (this.serverCapabilities.getTools() == null) {
-			return Mono.error(new McpError("Server must be configured with tool capabilities"));
+		if (this.serverCapabilities.tools() == null) {
+			return Mono.error(new IllegalStateException("Server must be configured with tool capabilities"));
 		}
 
 		return Mono.defer(() -> {
-			boolean removed = this.tools
-					.removeIf(toolSpecification -> toolSpecification.getTool().getName().equals(toolName));
-			if (removed) {
+			if (this.tools.removeIf(toolSpecification -> toolSpecification.tool().name().equals(toolName))) {
+
 				logger.debug("Removed tool handler: {}", toolName);
-				if (this.serverCapabilities.getTools().getListChanged()) {
+				if (this.serverCapabilities.tools().listChanged()) {
 					return notifyToolsListChanged();
 				}
-				return Mono.empty();
 			}
-			return Mono.error(new McpError("Tool with name '" + toolName + "' not found"));
+			else {
+				logger.warn("Ignore as a Tool with name '{}' not found", toolName);
+			}
+
+			return Mono.empty();
 		});
 	}
 
@@ -487,7 +495,7 @@ public class McpAsyncServer {
 
 	private McpRequestHandler<McpSchema.ListToolsResult> toolsListRequestHandler() {
 		return (exchange, params) -> {
-			List<Tool> tools = this.tools.stream().map(McpServerFeatures.AsyncToolSpecification::getTool).collect(Collectors.toList());
+			List<Tool> tools = this.tools.stream().map(McpServerFeatures.AsyncToolSpecification::tool).toList();
 
 			return Mono.just(new McpSchema.ListToolsResult(tools, null));
 		};
@@ -495,20 +503,22 @@ public class McpAsyncServer {
 
 	private McpRequestHandler<CallToolResult> toolsCallRequestHandler() {
 		return (exchange, params) -> {
-			McpSchema.CallToolRequest callToolRequest = objectMapper.convertValue(params,
-					new TypeReference<McpSchema.CallToolRequest>() {
+			McpSchema.CallToolRequest callToolRequest = jsonMapper.convertValue(params,
+					new TypeRef<McpSchema.CallToolRequest>() {
 					});
 
 			Optional<McpServerFeatures.AsyncToolSpecification> toolSpecification = this.tools.stream()
-					.filter(tr -> callToolRequest.getName().equals(tr.getTool().getName()))
-					.findAny();
+				.filter(tr -> callToolRequest.name().equals(tr.tool().name()))
+				.findAny();
 
-			if (toolSpecification.isPresent() == false) {
-				return Mono.error(new McpError("Tool not found: " + callToolRequest.getName()));
+			if (toolSpecification.isEmpty()) {
+				return Mono.error(McpError.builder(ErrorCodes.INVALID_PARAMS)
+					.message("Unknown tool: invalid_tool_name")
+					.data("Tool not found: " + callToolRequest.name())
+					.build());
 			}
 
-			return toolSpecification.map(tool -> Mono.defer(() -> tool.getCallHandler().apply(exchange, callToolRequest)))
-					.orElse(Mono.error(new McpError("Tool not found: " + callToolRequest.getName())));
+			return toolSpecification.get().callHandler().apply(exchange, callToolRequest);
 		};
 	}
 
@@ -522,25 +532,36 @@ public class McpAsyncServer {
 	 * @return Mono that completes when clients have been notified of the change
 	 */
 	public Mono<Void> addResource(McpServerFeatures.AsyncResourceSpecification resourceSpecification) {
-		if (resourceSpecification == null || resourceSpecification.getResource() == null) {
-			return Mono.error(new McpError("Resource must not be null"));
+		if (resourceSpecification == null || resourceSpecification.resource() == null) {
+			return Mono.error(new IllegalArgumentException("Resource must not be null"));
 		}
 
-		if (this.serverCapabilities.getResources() == null) {
-			return Mono.error(new McpError("Server must be configured with resource capabilities"));
+		if (this.serverCapabilities.resources() == null) {
+			return Mono.error(new IllegalStateException(
+					"Server must be configured with resource capabilities to allow adding resources"));
 		}
 
 		return Mono.defer(() -> {
-			if (this.resources.putIfAbsent(resourceSpecification.getResource().getUri(), resourceSpecification) != null) {
-				return Mono.error(new McpError(
-						"Resource with URI '" + resourceSpecification.getResource().getUri() + "' already exists"));
+			var previous = this.resources.put(resourceSpecification.resource().uri(), resourceSpecification);
+			if (previous != null) {
+				logger.warn("Replace existing Resource with URI '{}'", resourceSpecification.resource().uri());
 			}
-			logger.debug("Added resource handler: {}", resourceSpecification.getResource().getUri());
-			if (this.serverCapabilities.getResources().getListChanged()) {
+			else {
+				logger.debug("Added resource handler: {}", resourceSpecification.resource().uri());
+			}
+			if (this.serverCapabilities.resources().listChanged()) {
 				return notifyResourcesListChanged();
 			}
 			return Mono.empty();
 		});
+	}
+
+	/**
+	 * List all registered resources.
+	 * @return A Flux stream of all registered resources
+	 */
+	public Flux<McpSchema.Resource> listResources() {
+		return Flux.fromIterable(this.resources.values()).map(McpServerFeatures.AsyncResourceSpecification::resource);
 	}
 
 	/**
@@ -550,22 +571,90 @@ public class McpAsyncServer {
 	 */
 	public Mono<Void> removeResource(String resourceUri) {
 		if (resourceUri == null) {
-			return Mono.error(new McpError("Resource URI must not be null"));
+			return Mono.error(new IllegalArgumentException("Resource URI must not be null"));
 		}
-		if (this.serverCapabilities.getResources() == null) {
-			return Mono.error(new McpError("Server must be configured with resource capabilities"));
+		if (this.serverCapabilities.resources() == null) {
+			return Mono.error(new IllegalStateException(
+					"Server must be configured with resource capabilities to allow removing resources"));
 		}
 
 		return Mono.defer(() -> {
 			McpServerFeatures.AsyncResourceSpecification removed = this.resources.remove(resourceUri);
 			if (removed != null) {
 				logger.debug("Removed resource handler: {}", resourceUri);
-				if (this.serverCapabilities.getResources().getListChanged()) {
+				if (this.serverCapabilities.resources().listChanged()) {
 					return notifyResourcesListChanged();
 				}
 				return Mono.empty();
 			}
-			return Mono.error(new McpError("Resource with URI '" + resourceUri + "' not found"));
+			else {
+				logger.warn("Ignore as a Resource with URI '{}' not found", resourceUri);
+			}
+			return Mono.empty();
+		});
+	}
+
+	/**
+	 * Add a new resource template at runtime.
+	 * @param resourceTemplateSpecification The resource template to add
+	 * @return Mono that completes when clients have been notified of the change
+	 */
+	public Mono<Void> addResourceTemplate(
+			McpServerFeatures.AsyncResourceTemplateSpecification resourceTemplateSpecification) {
+
+		if (this.serverCapabilities.resources() == null) {
+			return Mono.error(new IllegalStateException(
+					"Server must be configured with resource capabilities to allow adding resource templates"));
+		}
+
+		return Mono.defer(() -> {
+			var previous = this.resourceTemplates.put(resourceTemplateSpecification.resourceTemplate().uriTemplate(),
+					resourceTemplateSpecification);
+			if (previous != null) {
+				logger.warn("Replace existing Resource Template with URI '{}'",
+						resourceTemplateSpecification.resourceTemplate().uriTemplate());
+			}
+			else {
+				logger.debug("Added resource template handler: {}",
+						resourceTemplateSpecification.resourceTemplate().uriTemplate());
+			}
+			if (this.serverCapabilities.resources().listChanged()) {
+				return notifyResourcesListChanged();
+			}
+			return Mono.empty();
+		});
+	}
+
+	/**
+	 * List all registered resource templates.
+	 * @return A Flux stream of all registered resource templates
+	 */
+	public Flux<McpSchema.ResourceTemplate> listResourceTemplates() {
+		return Flux.fromIterable(this.resourceTemplates.values())
+			.map(McpServerFeatures.AsyncResourceTemplateSpecification::resourceTemplate);
+	}
+
+	/**
+	 * Remove a resource template at runtime.
+	 * @param uriTemplate The URI template of the resource template to remove
+	 * @return Mono that completes when clients have been notified of the change
+	 */
+	public Mono<Void> removeResourceTemplate(String uriTemplate) {
+
+		if (this.serverCapabilities.resources() == null) {
+			return Mono.error(new IllegalStateException(
+					"Server must be configured with resource capabilities to allow removing resource templates"));
+		}
+
+		return Mono.defer(() -> {
+			McpServerFeatures.AsyncResourceTemplateSpecification removed = this.resourceTemplates.remove(uriTemplate);
+			if (removed != null) {
+				logger.debug("Removed resource template: {}", uriTemplate);
+			}
+			else {
+				logger.warn("Ignore as a Resource Template with URI '{}' not found", uriTemplate);
+			}
+			return Mono.empty();
 		});
 	}
 
@@ -589,54 +678,58 @@ public class McpAsyncServer {
 	private McpRequestHandler<McpSchema.ListResourcesResult> resourcesListRequestHandler() {
 		return (exchange, params) -> {
 			var resourceList = this.resources.values()
-					.stream()
-					.map(McpServerFeatures.AsyncResourceSpecification::getResource)
-					.collect(Collectors.toList());
+				.stream()
+				.map(McpServerFeatures.AsyncResourceSpecification::resource)
+				.toList();
 			return Mono.just(new McpSchema.ListResourcesResult(resourceList, null));
 		};
 	}
 
 	private McpRequestHandler<McpSchema.ListResourceTemplatesResult> resourceTemplateListRequestHandler() {
-		return (exchange, params) -> Mono
-				.just(new McpSchema.ListResourceTemplatesResult(this.getResourceTemplates(), null));
-
-	}
-
-	private List<McpSchema.ResourceTemplate> getResourceTemplates() {
-		var list = new ArrayList<>(this.resourceTemplates);
-		List<ResourceTemplate> resourceTemplates = this.resources.keySet()
+		return (exchange, params) -> {
+			var resourceList = this.resourceTemplates.values()
 				.stream()
-				.filter(uri -> uri.contains("{"))
-				.map(uri -> {
-					var resource = this.resources.get(uri).getResource();
-					var template = new McpSchema.ResourceTemplate(resource.getUri(), resource.getName(), resource.getTitle(),
-							resource.getDescription(), resource.getMimeType(), resource.getAnnotations());
-					return template;
-				})
-				.collect(Collectors.toList());
-
-		list.addAll(resourceTemplates);
-
-		return list;
+				.map(McpServerFeatures.AsyncResourceTemplateSpecification::resourceTemplate)
+				.toList();
+			return Mono.just(new McpSchema.ListResourceTemplatesResult(resourceList, null));
+		};
 	}
 
 	private McpRequestHandler<McpSchema.ReadResourceResult> resourcesReadRequestHandler() {
-		return (exchange, params) -> {
-			McpSchema.ReadResourceRequest resourceRequest = objectMapper.convertValue(params,
-					new TypeReference<McpSchema.ReadResourceRequest>() {
-					});
-			var resourceUri = resourceRequest.getUri();
+		return (ex, params) -> {
+			McpSchema.ReadResourceRequest resourceRequest = jsonMapper.convertValue(params, new TypeRef<>() {
+			});
 
-			McpServerFeatures.AsyncResourceSpecification specification = this.resources.values()
-					.stream()
-					.filter(resourceSpecification -> this.uriTemplateManagerFactory
-							.create(resourceSpecification.getResource().getUri())
-							.matches(resourceUri))
-					.findFirst()
-					.orElseThrow(() -> new McpError("Resource not found: " + resourceUri));
+			var resourceUri = resourceRequest.uri();
 
-			return Mono.defer(() -> specification.getReadHandler().apply(exchange, resourceRequest));
+			// First try to find a static resource specification
+			// Static resources have exact URIs
+			return this.findResourceSpecification(resourceUri)
+				.map(spec -> spec.readHandler().apply(ex, resourceRequest))
+				.orElseGet(() -> {
+					// If not found, try to find a dynamic resource specification
+					// Dynamic resources have URI templates
+					return this.findResourceTemplateSpecification(resourceUri)
+						.map(spec -> spec.readHandler().apply(ex, resourceRequest))
+						.orElseGet(() -> Mono.error(RESOURCE_NOT_FOUND.apply(resourceUri)));
+				});
 		};
+	}
+
+	private Optional<McpServerFeatures.AsyncResourceSpecification> findResourceSpecification(String uri) {
+		var result = this.resources.values()
+			.stream()
+			.filter(spec -> this.uriTemplateManagerFactory.create(spec.resource().uri()).matches(uri))
+			.findFirst();
+		return result;
+	}
+
+	private Optional<McpServerFeatures.AsyncResourceTemplateSpecification> findResourceTemplateSpecification(
+			String uri) {
+		return this.resourceTemplates.values()
+			.stream()
+			.filter(spec -> this.uriTemplateManagerFactory.create(spec.resourceTemplate().uriTemplate()).matches(uri))
+			.findFirst();
 	}
 
 	// ---------------------------------------
@@ -650,30 +743,34 @@ public class McpAsyncServer {
 	 */
 	public Mono<Void> addPrompt(McpServerFeatures.AsyncPromptSpecification promptSpecification) {
 		if (promptSpecification == null) {
-			return Mono.error(new McpError("Prompt specification must not be null"));
+			return Mono.error(new IllegalArgumentException("Prompt specification must not be null"));
 		}
-		if (this.serverCapabilities.getPrompts() == null) {
-			return Mono.error(new McpError("Server must be configured with prompt capabilities"));
+		if (this.serverCapabilities.prompts() == null) {
+			return Mono.error(new IllegalStateException("Server must be configured with prompt capabilities"));
 		}
 
 		return Mono.defer(() -> {
-			McpServerFeatures.AsyncPromptSpecification specification = this.prompts
-					.putIfAbsent(promptSpecification.getPrompt().getName(), promptSpecification);
-			if (specification != null) {
-				return Mono.error(
-						new McpError("Prompt with name '" + promptSpecification.getPrompt().getName() + "' already exists"));
+			var previous = this.prompts.put(promptSpecification.prompt().name(), promptSpecification);
+			if (previous != null) {
+				logger.warn("Replace existing Prompt with name '{}'", promptSpecification.prompt().name());
+			}
+			else {
+				logger.debug("Added prompt handler: {}", promptSpecification.prompt().name());
+			}
+			if (this.serverCapabilities.prompts().listChanged()) {
+				return this.notifyPromptsListChanged();
 			}
 
-			logger.debug("Added prompt handler: {}", promptSpecification.getPrompt().getName());
-
-			// Servers that declared the listChanged capability SHOULD send a
-			// notification,
-			// when the list of available prompts changes
-			if (this.serverCapabilities.getPrompts().getListChanged()) {
-				return notifyPromptsListChanged();
-			}
 			return Mono.empty();
 		});
+	}
+
+	/**
+	 * List all registered prompts.
+	 * @return A Flux stream of all registered prompts
+	 */
+	public Flux<McpSchema.Prompt> listPrompts() {
+		return Flux.fromIterable(this.prompts.values()).map(McpServerFeatures.AsyncPromptSpecification::prompt);
 	}
 
 	/**
@@ -683,10 +780,10 @@ public class McpAsyncServer {
 	 */
 	public Mono<Void> removePrompt(String promptName) {
 		if (promptName == null) {
-			return Mono.error(new McpError("Prompt name must not be null"));
+			return Mono.error(new IllegalArgumentException("Prompt name must not be null"));
 		}
-		if (this.serverCapabilities.getPrompts() == null) {
-			return Mono.error(new McpError("Server must be configured with prompt capabilities"));
+		if (this.serverCapabilities.prompts() == null) {
+			return Mono.error(new IllegalStateException("Server must be configured with prompt capabilities"));
 		}
 
 		return Mono.defer(() -> {
@@ -694,14 +791,15 @@ public class McpAsyncServer {
 
 			if (removed != null) {
 				logger.debug("Removed prompt handler: {}", promptName);
-				// Servers that declared the listChanged capability SHOULD send a
-				// notification, when the list of available prompts changes
-				if (this.serverCapabilities.getPrompts().getListChanged()) {
+				if (this.serverCapabilities.prompts().listChanged()) {
 					return this.notifyPromptsListChanged();
 				}
 				return Mono.empty();
 			}
-			return Mono.error(new McpError("Prompt with name '" + promptName + "' not found"));
+			else {
+				logger.warn("Ignore as a Prompt with name '{}' not found", promptName);
+			}
+			return Mono.empty();
 		});
 	}
 
@@ -721,9 +819,9 @@ public class McpAsyncServer {
 			// });
 
 			var promptList = this.prompts.values()
-					.stream()
-					.map(McpServerFeatures.AsyncPromptSpecification::getPrompt)
-					.collect(Collectors.toList());
+				.stream()
+				.map(McpServerFeatures.AsyncPromptSpecification::prompt)
+				.toList();
 
 			return Mono.just(new McpSchema.ListPromptsResult(promptList, null));
 		};
@@ -731,17 +829,21 @@ public class McpAsyncServer {
 
 	private McpRequestHandler<McpSchema.GetPromptResult> promptsGetRequestHandler() {
 		return (exchange, params) -> {
-			McpSchema.GetPromptRequest promptRequest = objectMapper.convertValue(params,
-					new TypeReference<McpSchema.GetPromptRequest>() {
+			McpSchema.GetPromptRequest promptRequest = jsonMapper.convertValue(params,
+					new TypeRef<McpSchema.GetPromptRequest>() {
 					});
 
 			// Implement prompt retrieval logic here
-			McpServerFeatures.AsyncPromptSpecification specification = this.prompts.get(promptRequest.getName());
+			McpServerFeatures.AsyncPromptSpecification specification = this.prompts.get(promptRequest.name());
+
 			if (specification == null) {
-				return Mono.error(new McpError("Prompt not found: " + promptRequest.getName()));
+				return Mono.error(McpError.builder(ErrorCodes.INVALID_PARAMS)
+					.message("Invalid prompt name")
+					.data("Prompt not found: " + promptRequest.name())
+					.build());
 			}
 
-			return Mono.defer(() -> specification.getPromptHandler().apply(exchange, promptRequest));
+			return Mono.defer(() -> specification.promptHandler().apply(exchange, promptRequest));
 		};
 	}
 
@@ -767,7 +869,7 @@ public class McpAsyncServer {
 			return Mono.error(new McpError("Logging message must not be null"));
 		}
 
-		if (loggingMessageNotification.getLevel().level() < minLoggingLevel.level()) {
+		if (loggingMessageNotification.level().level() < minLoggingLevel.level()) {
 			return Mono.empty();
 		}
 
@@ -779,76 +881,124 @@ public class McpAsyncServer {
 		return (exchange, params) -> {
 			return Mono.defer(() -> {
 
-				SetLevelRequest newMinLoggingLevel = objectMapper.convertValue(params,
-						new TypeReference<SetLevelRequest>() {
-						});
+				SetLevelRequest newMinLoggingLevel = jsonMapper.convertValue(params, new TypeRef<SetLevelRequest>() {
+				});
 
-				exchange.setMinLoggingLevel(newMinLoggingLevel.getLevel());
+				exchange.setMinLoggingLevel(newMinLoggingLevel.level());
 
 				// FIXME: this field is deprecated and should be removed together
 				// with the broadcasting loggingNotification.
-				this.minLoggingLevel = newMinLoggingLevel.getLevel();
+				this.minLoggingLevel = newMinLoggingLevel.level();
 
-				return Mono.just(Utils.asMap());
+				return Mono.just(Map.of());
 			});
 		};
 	}
 
+	private static final Mono<McpSchema.CompleteResult> EMPTY_COMPLETION_RESULT = Mono
+		.just(new McpSchema.CompleteResult(new CompleteCompletion(List.of(), 0, false)));
+
 	private McpRequestHandler<McpSchema.CompleteResult> completionCompleteRequestHandler() {
 		return (exchange, params) -> {
+
 			McpSchema.CompleteRequest request = parseCompletionParams(params);
 
-			if (request.getRef() == null) {
-				return Mono.error(new McpError("ref must not be null"));
+			if (request.ref() == null) {
+				return Mono.error(
+						McpError.builder(ErrorCodes.INVALID_PARAMS).message("Completion ref must not be null").build());
 			}
 
-			if (request.getRef().getType() == null) {
-				return Mono.error(new McpError("type must not be null"));
+			if (request.ref().type() == null) {
+				return Mono.error(McpError.builder(ErrorCodes.INVALID_PARAMS)
+					.message("Completion ref type must not be null")
+					.build());
 			}
 
-			String type = request.getRef().getType();
+			String type = request.ref().type();
 
-			String argumentName = request.getArgument().getName();
+			String argumentName = request.argument().name();
 
-			// check if the referenced resource exists
-			if (type.equals("ref/prompt") && request.getRef() instanceof McpSchema.PromptReference) {
-				McpSchema.PromptReference promptReference =  (McpSchema.PromptReference) request.getRef();
-				McpServerFeatures.AsyncPromptSpecification promptSpec = this.prompts.get(promptReference.getName());
+			// Check if valid a Prompt exists for this completion request
+			if (type.equals(PromptReference.TYPE)
+					&& request.ref() instanceof McpSchema.PromptReference promptReference) {
+
+				McpServerFeatures.AsyncPromptSpecification promptSpec = this.prompts.get(promptReference.name());
 				if (promptSpec == null) {
-					return Mono.error(new McpError("Prompt not found: " + promptReference.getName()));
+					return Mono.error(McpError.builder(ErrorCodes.INVALID_PARAMS)
+						.message("Prompt not found: " + promptReference.name())
+						.build());
 				}
-				if (!promptSpec.getPrompt()
-						.getArguments()
-						.stream()
-						.filter(arg -> arg.getName().equals(argumentName))
-						.findFirst()
-						.isPresent()) {
+				if (!promptSpec.prompt()
+					.arguments()
+					.stream()
+					.filter(arg -> arg.name().equals(argumentName))
+					.findFirst()
+					.isPresent()) {
 
-					return Mono.error(new McpError("Argument not found: " + argumentName));
+					logger.warn("Argument not found: {} in prompt: {}", argumentName, promptReference.name());
+
+					return EMPTY_COMPLETION_RESULT;
 				}
 			}
 
-			if (type.equals("ref/resource") && request.getRef() instanceof McpSchema.ResourceReference) {
-				McpSchema.ResourceReference resourceReference = (McpSchema.ResourceReference)request.getRef();
-				McpServerFeatures.AsyncResourceSpecification resourceSpec = this.resources.get(resourceReference.getUri());
-				if (resourceSpec == null) {
-					return Mono.error(new McpError("Resource not found: " + resourceReference.getUri()));
+			// Check if valid Resource or ResourceTemplate exists for this completion
+			// request
+			if (type.equals(ResourceReference.TYPE)
+					&& request.ref() instanceof McpSchema.ResourceReference resourceReference) {
+
+				var uriTemplateManager = uriTemplateManagerFactory.create(resourceReference.uri());
+
+				if (!uriTemplateManager.isUriTemplate(resourceReference.uri())) {
+					// Attempting to autocomplete a fixed resource URI is not an error in
+					// the spec (but probably should be).
+					return EMPTY_COMPLETION_RESULT;
 				}
-				if (!uriTemplateManagerFactory.create(resourceSpec.getResource().getUri())
+
+				McpServerFeatures.AsyncResourceSpecification resourceSpec = this
+					.findResourceSpecification(resourceReference.uri())
+					.orElse(null);
+
+				if (resourceSpec != null) {
+					if (!uriTemplateManagerFactory.create(resourceSpec.resource().uri())
 						.getVariableNames()
 						.contains(argumentName)) {
-					return Mono.error(new McpError("Argument not found: " + argumentName));
-				}
 
+						return Mono.error(McpError.builder(ErrorCodes.INVALID_PARAMS)
+							.message("Argument not found: " + argumentName + " in resource: " + resourceReference.uri())
+							.build());
+					}
+				}
+				else {
+					var templateSpec = this.findResourceTemplateSpecification(resourceReference.uri()).orElse(null);
+					if (templateSpec != null) {
+
+						if (!uriTemplateManagerFactory.create(templateSpec.resourceTemplate().uriTemplate())
+							.getVariableNames()
+							.contains(argumentName)) {
+
+							return Mono.error(McpError.builder(ErrorCodes.INVALID_PARAMS)
+								.message("Argument not found: " + argumentName + " in resource template: "
+										+ resourceReference.uri())
+								.build());
+						}
+					}
+					else {
+						return Mono.error(RESOURCE_NOT_FOUND.apply(resourceReference.uri()));
+					}
+				}
 			}
 
-			McpServerFeatures.AsyncCompletionSpecification specification = this.completions.get(request.getRef());
+			// Handle the completion request using the registered handler
+			// for the given reference.
+			McpServerFeatures.AsyncCompletionSpecification specification = this.completions.get(request.ref());
 
 			if (specification == null) {
-				return Mono.error(new McpError("AsyncCompletionSpecification not found: " + request.getRef()));
+				return Mono.error(McpError.builder(ErrorCodes.INVALID_PARAMS)
+					.message("AsyncCompletionSpecification not found: " + request.ref())
+					.build());
 			}
 
-			return Mono.defer(() -> specification.getCompletionHandler().apply(exchange, request));
+			return Mono.defer(() -> specification.completionHandler().apply(exchange, request));
 		};
 	}
 
@@ -875,15 +1025,12 @@ public class McpAsyncServer {
 
 		String refType = (String) refMap.get("type");
 
-		McpSchema.CompleteReference ref;
-		if("ref/prompt" .equals(refType)){
-			ref = new McpSchema.PromptReference(refType, (String) refMap.get("name"),
+		McpSchema.CompleteReference ref = switch (refType) {
+			case PromptReference.TYPE -> new McpSchema.PromptReference(refType, (String) refMap.get("name"),
 					refMap.get("title") != null ? (String) refMap.get("title") : null);
-		} else if("ref/resource".equals(refType)){
-			ref = new McpSchema.ResourceReference(refType, (String) refMap.get("uri"));
-		} else{
-			throw new IllegalArgumentException("Invalid ref type: " + refType);
-		}
+			case ResourceReference.TYPE -> new McpSchema.ResourceReference(refType, (String) refMap.get("uri"));
+			default -> throw new IllegalArgumentException("Invalid ref type: " + refType);
+		};
 
 		String argName = (String) argMap.get("name");
 		String argValue = (String) argMap.get("value");
