@@ -7,7 +7,8 @@ package io.modelcontextprotocol.util;
 import reactor.util.annotation.Nullable;
 
 import java.net.URI;
-import java.util.*;
+import java.util.Collection;
+import java.util.Map;
 
 /**
  * Miscellaneous utility methods.
@@ -29,11 +30,7 @@ public final class Utils {
 	 * @see Character#isWhitespace
 	 */
 	public static boolean hasText(@Nullable String str) {
-		return (str != null && !isBlank(str));
-	}
-
-	public static boolean isBlank(String str){
-		return str == null || str.trim().isEmpty();
+		return (str != null && !str.isBlank());
 	}
 
 	/**
@@ -110,49 +107,4 @@ public final class Utils {
 		return endpointPath.startsWith(basePath);
 	}
 
-	/**
-	 * 转为一个可变 List
-	 */
-	public static <T> List<T> asList(T... ary) {
-		if (ary == null) {
-			return new ArrayList<>();
-		} else {
-			List<T> list = new ArrayList<>(ary.length);
-			Collections.addAll(list, ary);
-			return list;
-		}
-	}
-	/**
-	 * 转为一个可变 Set
-	 */
-	public static <T> Set<T> asSet(T... ary) {
-		if (ary == null) {
-			return new HashSet<>();
-		} else {
-			Set<T> list = new HashSet<>(ary.length);
-			Collections.addAll(list, ary);
-			return list;
-		}
-	}
-
-
-	/**
-	 * 转为一个可变 Map
-	 */
-	public static Map asMap(Object... keyValues) {
-		if(keyValues == null || keyValues.length == 0) {
-			return new LinkedHashMap<>();
-		}
-
-		if (keyValues.length % 2 != 0) {
-			throw new IllegalArgumentException("keyValues.length % 2 != 0");
-		}
-
-		Map map = new LinkedHashMap(keyValues.length / 2);
-		for (int i = 0; i < keyValues.length; i += 2) {
-			map.put(keyValues[i], keyValues[i + 1]);
-		}
-
-		return map;
-	}
 }
